--- a/index.html
+++ b/index.html
@@ -7,25 +7,65 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <nav class="navbar">
-      <div class="navbar-container container">
-        <input type="checkbox" name="" id="" />
-        <div class="hamburger-lines">
-          <span class="line line1"></span>
-          <span class="line line2"></span>
-          <span class="line line3"></span>
+    <header>
+      <nav class="navbar">
+        <div class="navbar-container container">
+          <input type="checkbox" name="" id="" />
+          <div class="hamburger-lines">
+            <span class="line line1"></span>
+            <span class="line line2"></span>
+            <span class="line line3"></span>
+          </div>
+          <ul class="menu-items">
+            <li><a href="#">Home</a></li>
+            <li><a href="#">About</a></li>
+            <li><a href="#">Category</a></li>
+            <li><a href="#">Menu</a></li>
+            <li><a href="#">Testimonial</a></li>
+            <li><a href="#">Contact</a></li>
+          </ul>
+          <h1 class="logo">Navbar</h1>
         </div>
-        <ul class="menu-items">
-          <li><a href="#">Home</a></li>
-          <li><a href="#">About</a></li>
-          <li><a href="#">Category</a></li>
-          <li><a href="#">Menu</a></li>
-          <li><a href="#">Testimonial</a></li>
-          <li><a href="#">Contact</a></li>
-        </ul>
-        <h1 class="logo">Navbar</h1>
+      </nav>
+    </header>
+    <section class="hero">
+      <div>
+        <h1>
+          The First “International Conference on Data, Computation and
+          Communication" is an event focused on the fields of data, computation
+          and communication.
+        </h1>
+        <span class="span1">(ICDCC-2024)</span>
+        <span class="date"> 29 Nov 2024 & 30 Nov 2024</span>
       </div>
-    </nav>
+      <hr />
+    </section>
+    <section class="scope">
+      <h1 class="heading">Scope of the Conference</h1>
+      <ul class="points">
+        <li>
+          Data science is an interdisciplinary field focused on extracting
+          knowledge from typically large data sets and applying the knowledge
+          and insights from that data to solve problems in a wide range of
+          application domains. The conference focuses on following research area
+          related to data science, machine learning and their application in
+          computational physics, computational chemistry, computational biology
+          and computational linguistics, computing paradigms like Cloud
+          computing.
+        </li>
+        <li>
+          The integration of computational science and data science offers
+          immense potential for advancing our understanding of chemical systems,
+          accelerating drug discovery, optimizing materials design, and
+          contributing to a wide range of scientific and industrial
+          applications. The synergy between computational science and data
+          science has the potential to revolutionize the way we understand and
+          manipulate scientific systems.
+        </li>
+      </ul>
+      <hr />
+    </section>
+
     <script src="script.js"></script>
   </body>
 </html>
