--- a/index.html
+++ b/index.html
@@ -18,11 +18,9 @@
           </div>
           <ul class="menu-items">
             <li><a href="#">Home</a></li>
-            <li><a href="#">About</a></li>
-            <li><a href="#">Category</a></li>
-            <li><a href="#">Menu</a></li>
-            <li><a href="#">Testimonial</a></li>
-            <li><a href="#">Contact</a></li>
+            <li><a href="#">Registration</a></li>
+            <li><a href="#">Convenor</a></li>
+            <li><a href="#">Contact Us</a></li>
           </ul>
           <h1 class="logo">Navbar</h1>
         </div>
