home page updated

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         </div>
       </nav>
     </header>
-    <section class="hero">
+    <section class="hero" id="hero">
       <div>
         <h1>
           The First “International Conference on Data, Computation and
@@ -40,7 +40,7 @@
       </div>
       <hr />
     </section>
-    <section class="scope">
+    <section class="scope" id="scope">
       <h1 class="heading">Scope of the Conference</h1>
       <ul class="points">
         <li>
@@ -64,6 +64,69 @@
         </li>
       </ul>
       <hr />
+    </section>
+    <section class="topic scope" id="topic">
+      <h1>Conference topics</h1>
+
+      <div class="topic-container">
+        <div class="topic-box">
+          <h3>Data Science</h3>
+          <br />
+          <ul>
+            <li>Pattern Recognition,</li>
+            <li>Computer Vision,</li>
+            <li>Speech, Image, Video and Signal Processing,</li>
+            <li>Big data,</li>
+            <li>Data visualization,</li>
+            <li>Artificial intelligence,</li>
+            <li>Data mining,</li>
+            <li>Health data science,</li>
+            <li>Optimization techniques,</li>
+            <li>Large-scale optimization,</li>
+            <li>Business intelligence and strategy, Machine learning,</li>
+            <li>Natural language processing,</li>
+            <li>Predictive modeling,</li>
+            <li>Databases and Warehousing,</li>
+            <li>Biologically Inspired and Evolutionary Algorithms,</li>
+            <li>Bio-Engineering and Bio-Informatics, Geo-Informatics,</li>
+            <li>Modelling and Simulation.</li>
+          </ul>
+        </div>
+        <div class="topic-box">
+          <h3>Computational Science</h3>
+          <ul>
+            <strong>Computational Linguistics & NLP</strong>
+            <li>NLP and Data Science,</li>
+            <li>Text Mining,</li>
+            <li>Text Classification,</li>
+            <li>Language Modeling,</li>
+            <li>Computational Linguistics and Communication,</li>
+            <li>Automated Translation,</li>
+            <li>Speech Processing,</li>
+            <li>Discourse Analysis,</li>
+            <li>Conversational AI,</li>
+            <li>Text+Image Integration.</li>
+            <strong>Computational Biology</strong>
+            <li>Genetic epidemiology and statistical genetics,</li>
+            <li>Computational and statistical meta genomics,</li>
+            <li>Machine learning in Functional genomics,</li>
+            <li>Data analysis in Cancer genomics and evolution.</li>
+            <strong>Computational Physics</strong>
+            <li>Material informatics,</li>
+            <li>Quantum information,</li>
+            <li>Fluid dynamics,</li>
+            <li>Satellite data processing,</li>
+            <li>Atmospheric physics.</li>
+            <strong>Computational Chemistry</strong>
+            <li>Quantum and Molecular Dynamics Simulations,</li>
+            <li>Material Science,</li>
+            <li>Chem informatics,</li>
+            <li>Chemical Reaction Pathways,</li>
+            <li>High-Throughput Screening.</li>
+          </ul>
+        </div>
+        <div class="topic-box"></div>
+      </div>
     </section>
 
     <script src="script.js"></script>
