--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
             <li><a href="#">Convenor</a></li>
             <li><a href="#">Contact Us</a></li>
           </ul>
-          <h1 class="logo">Navbar</h1>
+          <!-- <h1 class="logo">Navbar</h1> -->
+          <!-- <img src="Img/logochhota 3.png" class="logo" /> -->
         </div>
       </nav>
     </header>
