--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
       <hr />
     </section>
     <section class="scope" id="scope">
-      <h1 class="heading">Scope of the Conference</h1>
+      <h1>Scope of the Conference</h1>
       <ul class="points">
         <li>
           Data science is an interdisciplinary field focused on extracting
@@ -68,29 +68,6 @@
       <h1>Conference topics</h1>
 
       <div class="topic-container">
-        <div class="topic-box">
-          <h3>Data Science</h3>
-          <br />
-          <ul>
-            <li>Pattern Recognition,</li>
-            <li>Computer Vision,</li>
-            <li>Speech, Image, Video and Signal Processing,</li>
-            <li>Big data,</li>
-            <li>Data visualization,</li>
-            <li>Artificial intelligence,</li>
-            <li>Data mining,</li>
-            <li>Health data science,</li>
-            <li>Optimization techniques,</li>
-            <li>Large-scale optimization,</li>
-            <li>Business intelligence and strategy, Machine learning,</li>
-            <li>Natural language processing,</li>
-            <li>Predictive modeling,</li>
-            <li>Databases and Warehousing,</li>
-            <li>Biologically Inspired and Evolutionary Algorithms,</li>
-            <li>Bio-Engineering and Bio-Informatics, Geo-Informatics,</li>
-            <li>Modelling and Simulation.</li>
-          </ul>
-        </div>
         <div class="topic-box">
           <h3>Computational Science</h3>
           <ul>
@@ -124,8 +101,73 @@
             <li>High-Throughput Screening.</li>
           </ul>
         </div>
-        <div class="topic-box"></div>
+        <div class="topic-box">
+          <h3>Data Science</h3>
+          <br />
+          <ul>
+            <li>Pattern Recognition,</li>
+            <li>Computer Vision,</li>
+            <li>Speech, Image, Video and Signal Processing,</li>
+            <li>Big data,</li>
+            <li>Data visualization,</li>
+            <li>Artificial intelligence,</li>
+            <li>Data mining,</li>
+            <li>Health data science,</li>
+            <li>Optimization techniques,</li>
+            <li>Large-scale optimization,</li>
+            <li>Business intelligence and strategy, Machine learning,</li>
+            <li>Natural language processing,</li>
+            <li>Predictive modeling,</li>
+            <li>Databases and Warehousing,</li>
+            <li>Biologically Inspired and Evolutionary Algorithms,</li>
+            <li>Bio-Engineering and Bio-Informatics, Geo-Informatics,</li>
+            <li>Modelling and Simulation.</li>
+          </ul>
+        </div>
+
+        <div class="topic-box">
+          <h3>Statistics, Probability, Algebra, Calculus</h3>
+          <ul>
+            <strong>Statistics</strong>
+            <li>Bayesian Statistics,</li>
+            <li>Time Series Analysis,</li>
+            <li>Probability and Stochastic Processes</li>
+            <li>Probabilistic Models,</li>
+            <li>Random Processes,</li>
+            <li>Risk Assessment,</li>
+            <li>Markov Chains,</li>
+            <li>Applications in Finance and Science.</li>
+            <strong>Algebra</strong>
+            <li>Group Theory, Ring Theory, Linear Algebra,</li>
+            <li>Algebraic Geometry</li>
+            <strong>Calculus</strong>
+            <li>Differential Equations,</li>
+            <li>Integration Techniques,</li>
+            <li>Mathematical Modelling,</li>
+            <li>Numerical Analysis,</li>
+            <li>Calculus in Engineering and Physics.</li>
+          </ul>
+        </div>
+
+        <div class="topic-box">
+          <h3>Cloud Computing</h3>
+          <ul>
+            <li>Cloud computing,</li>
+            <li>High Performance Computing,</li>
+            <li>Edge computing,</li>
+            <li>Mobile computing,</li>
+            <li>Distributed and Parallel computing,</li>
+            <li>Federated computing,</li>
+            <li>Web services,</li>
+            <li>Wireless Sensor Networks.</li>
+          </ul>
+        </div>
       </div>
+      <hr />
+    </section>
+    <section class="timeline scope" id="timeline">
+      <h1 class="heading">Timeline</h1>
+      <img src="Img/Frame 3.svg" alt="" />
     </section>
 
     <script src="script.js"></script>
