--- a/pages/organizing_team.html
+++ b/pages/organizing_team.html
@@ -18,17 +18,15 @@
           </div>
           <ul class="menu-items">
             <li><a href="../index.html">Home</a></li>
-            <li><a href="#">About</a></li>
-            <li><a href="#">Category</a></li>
-            <li><a href="#">Menu</a></li>
-            <li><a href="#">Testimonial</a></li>
-            <li><a href="./pages/organizing_team.html">Contact</a></li>
+            <li><a href="Registration.html">Registration</a></li>
+            <li><a href="organizing_team.html">Convenor</a></li>
+            <li><a href="Contact_US.html">Contact Us</a></li>
           </ul>
           <h1 class="logo">Navbar</h1>
         </div>
       </nav>
     </header>
-    <section class="hero">
+    <section>
       <div class="main">
         <h2 style="text-align: center">Organizing Team</h2>
         <p class="para">
