--- a/pages/Registration.html
+++ b/pages/Registration.html
@@ -17,12 +17,12 @@
             <span class="line line3"></span>
           </div>
           <ul class="menu-items">
-            <li><a href="#">Home</a></li>
-            <li><a href="#">Registration</a></li>
-            <li><a href="#">Convenor</a></li>
-            <li><a href="pages/organizing_team.html">Contact Us</a></li>
+            <li><a href="../index.html">Home</a></li>
+            <li><a href="Registration.html">Registration</a></li>
+            <li><a href="organizing_team.html">Convenor</a></li>
+            <li><a href="Contact_US.html">Contact Us</a></li>
           </ul>
-          <!-- <h1 class="logo">Navbar</h1> -->
+          <h1 class="logo">Navbar</h1>
           <!-- <img src="Img/logochhota 3.png" class="logo" /> -->
         </div>
       </nav>
