--- a/pages/organizing_team.html
+++ b/pages/organizing_team.html
@@ -65,7 +65,7 @@
             </li>
             <li>Dr. Debashish Adhikari, Registrar, VIT Bhopal University.</li>
           </ul>
-          <h3>General Chair</h3>
+          <h3>General Chair(s)</h3>
           <ul style="list-style-type: circle">
             <li>
               Dr. S. Poonkuntran, Professor & Dean, SCSE, VIT Bhopal University.
