--- a/pages/organizing_team.html
+++ b/pages/organizing_team.html
@@ -22,7 +22,7 @@
             <li><a href="organizing_team.html">Convenor</a></li>
             <li><a href="Contact_US.html">Contact Us</a></li>
           </ul>
-          <h1 class="logo">Navbar</h1>
+          <!-- <h1 class="logo">Navbar</h1> -->
         </div>
       </nav>
     </header>
