--- a/pages/Registration.html
+++ b/pages/Registration.html
@@ -22,8 +22,8 @@
             <li><a href="organizing_team.html">Convenor</a></li>
             <li><a href="Contact_US.html">Contact Us</a></li>
           </ul>
-          <h1 class="logo">Navbar</h1>
-          <!-- <img src="Img/logochhota 3.png" class="logo" /> -->
+          <!-- <h1 class="logo">Navbar</h1> -->
+          <img src="../Img/logochhota 3.png" class="logo" />
         </div>
       </nav>
     </header>
