--- a/pages/Contact_US.html
+++ b/pages/Contact_US.html
@@ -23,7 +23,7 @@
             <li><a href="Contact_US.html">Contact Us</a></li>
           </ul>
           <!-- <h1 class="logo">Navbar</h1> -->
-          <!-- <img src="Img/logochhota 3.png" class="logo" /> -->
+          <img src="../Img/logochhota 3.png" class="logo" />
         </div>
       </nav>
     </header>
