--- a/pages/organizing_team.html
+++ b/pages/organizing_team.html
@@ -23,6 +23,7 @@
             <li><a href="Contact_US.html">Contact Us</a></li>
           </ul>
           <!-- <h1 class="logo">Navbar</h1> -->
+          <img src="../Img/logochhota 3.png" class="logo" />
         </div>
       </nav>
     </header>
