--- a/pages/Registration.html
+++ b/pages/Registration.html
@@ -19,7 +19,7 @@
           <ul class="menu-items">
             <li><a href="../index.html">Home</a></li>
             <li><a href="Registration.html">Registration</a></li>
-            <li><a href="organizing_team.html">Convenor</a></li>
+            <li><a href="organizing_team.html">The Team</a></li>
             <li><a href="Contact_US.html">Contact Us</a></li>
           </ul>
           <!-- <h1 class="logo">Navbar</h1> -->
@@ -61,6 +61,7 @@
     <section class="term scope">
       <h1>Registration Fee Policy for ICDCC-2024</h1>
       <p>
+        <!-- center align -->
         <strong> Registration Fee:</strong> The registration fee for the
         International Conference on Digital Communication and Computing
         (ICDCC-2024) is non-refundable. Registered attendees are obligated to
@@ -85,7 +86,7 @@
       <p>
         Should you have any questions or concerns regarding the registration fee
         or cancellation policy, please do not hesitate to contact our organizing
-        committee for further assistance.
+        secretrary for further assistance.
       </p>
     </section>
     <footer>
@@ -95,7 +96,7 @@
           VIT Bhopal University <br />
           Bhopal-Indore Highway<br />
           Kothrikalan, Sehore <br />
-          Madhya Pradesh — 466114 <br />
+          Madhya Pradesh, India — 466114 <br />
           Phone: +91/07560254500/501/502<br />
         </p>
 
