--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
           <ul class="menu-items">
             <li><a href="index.html">Home</a></li>
             <li><a href="pages/Registration.html">Registration</a></li>
-            <li><a href="pages/organizing_team.html">Convenor</a></li>
+            <li><a href="pages/organizing_team.html">The Team</a></li>
             <li><a href="pages/Contact_US.html">Contact Us</a></li>
           </ul>
           <!-- <h1 class="logo">Navbar</h1> -->
@@ -72,56 +72,57 @@
           <h3>Computational Science</h3>
           <ul>
             <strong>Computational Linguistics & NLP</strong>
-            <li>NLP and Data Science,</li>
-            <li>Text Mining,</li>
-            <li>Text Classification,</li>
-            <li>Language Modeling,</li>
-            <li>Computational Linguistics and Communication,</li>
-            <li>Automated Translation,</li>
-            <li>Speech Processing,</li>
-            <li>Discourse Analysis,</li>
-            <li>Conversational AI,</li>
-            <li>Text+Image Integration.</li>
+            <li>NLP and Data Science</li>
+            <li>Text Mining</li>
+            <li>Text Classification</li>
+            <li>Language Modeling</li>
+            <li>Computational Linguistics and Communication</li>
+            <li>Automated Translation</li>
+            <li>Speech Processing</li>
+            <li>Discourse Analysis</li>
+            <li>Conversational AI</li>
+            <li>Text+Image Integration</li>
             <strong>Computational Biology</strong>
-            <li>Genetic epidemiology and statistical genetics,</li>
-            <li>Computational and statistical meta genomics,</li>
-            <li>Machine learning in Functional genomics,</li>
-            <li>Data analysis in Cancer genomics and evolution.</li>
+            <li>Genetic epidemiology and statistical genetics</li>
+            <li>Computational and statistical meta genomics</li>
+            <li>Machine learning in Functional genomics</li>
+            <li>Data analysis in Cancer genomics and evolution</li>
             <strong>Computational Physics</strong>
-            <li>Material informatics,</li>
-            <li>Quantum information,</li>
-            <li>Fluid dynamics,</li>
-            <li>Satellite data processing,</li>
-            <li>Atmospheric physics.</li>
+            <li>Material informatics</li>
+            <li>Quantum information</li>
+            <li>Fluid dynamics</li>
+            <li>Satellite data processing</li>
+            <li>Atmospheric physics</li>
             <strong>Computational Chemistry</strong>
-            <li>Quantum and Molecular Dynamics Simulations,</li>
-            <li>Material Science,</li>
-            <li>Chem informatics,</li>
-            <li>Chemical Reaction Pathways,</li>
-            <li>High-Throughput Screening.</li>
+            <li>Quantum and Molecular Dynamics Simulations</li>
+            <li>Material Science</li>
+            <li>Cheminformatics</li>
+            <li>Chemical Reaction Pathways</li>
+            <li>High-Throughput Screening</li>
           </ul>
         </div>
         <div class="topic-box">
           <h3>Data Science</h3>
           <br />
           <ul>
-            <li>Pattern Recognition,</li>
-            <li>Computer Vision,</li>
-            <li>Speech, Image, Video and Signal Processing,</li>
-            <li>Big data,</li>
-            <li>Data visualization,</li>
-            <li>Artificial intelligence,</li>
-            <li>Data mining,</li>
-            <li>Health data science,</li>
-            <li>Optimization techniques,</li>
-            <li>Large-scale optimization,</li>
-            <li>Business intelligence and strategy, Machine learning,</li>
-            <li>Natural language processing,</li>
-            <li>Predictive modeling,</li>
-            <li>Databases and Warehousing,</li>
-            <li>Biologically Inspired and Evolutionary Algorithms,</li>
-            <li>Bio-Engineering and Bio-Informatics, Geo-Informatics,</li>
-            <li>Modelling and Simulation.</li>
+            <li>Pattern Recognition</li>
+            <li>Computer Vision</li>
+            <li>Speech, Image, Video and Signal Processing</li>
+            <li>Big data</li>
+            <li>Data visualization</li>
+            <li>Artificial intelligence</li>
+            <li>Data mining</li>
+            <li>Health data science</li>
+            <li>Optimization techniques</li>
+            <li>Large-scale optimization</li>
+            <li>Business intelligence and strategy</li>
+            <li>Machine learning</li>
+            <li>Natural language processing</li>
+            <li>Predictive modeling</li>
+            <li>Databases and Warehousing</li>
+            <li>Biologically Inspired and Evolutionary Algorithms</li>
+            <li>Bio-Engineering and Bio-Informatics, Geo-Informatics</li>
+            <li>Modelling and Simulation</li>
           </ul>
         </div>
 
@@ -129,37 +130,39 @@
           <h3>Statistics, Probability, Algebra, Calculus</h3>
           <ul>
             <strong>Statistics</strong>
-            <li>Bayesian Statistics,</li>
-            <li>Time Series Analysis,</li>
+            <li>Bayesian Statistics</li>
+            <li>Time Series Analysis</li>
             <li>Probability and Stochastic Processes</li>
-            <li>Probabilistic Models,</li>
-            <li>Random Processes,</li>
-            <li>Risk Assessment,</li>
-            <li>Markov Chains,</li>
-            <li>Applications in Finance and Science.</li>
+            <li>Probabilistic Models</li>
+            <li>Random Processes</li>
+            <li>Risk Assessment</li>
+            <li>Markov Chains</li>
+            <li>Applications in Finance and Science</li>
             <strong>Algebra</strong>
-            <li>Group Theory, Ring Theory, Linear Algebra,</li>
+            <li>Group Theory, Ring Theory, Linear Algebra</li>
             <li>Algebraic Geometry</li>
             <strong>Calculus</strong>
-            <li>Differential Equations,</li>
-            <li>Integration Techniques,</li>
-            <li>Mathematical Modelling,</li>
-            <li>Numerical Analysis,</li>
-            <li>Calculus in Engineering and Physics.</li>
+            <li>Differential Equations</li>
+            <li>Integration Techniques</li>
+            <li>Mathematical Modelling</li>
+            <li>Numerical Analysis</li>
+            <li>Calculus in Engineering and Physics</li>
           </ul>
         </div>
 
         <div class="topic-box">
           <h3>Cloud Computing</h3>
           <ul>
-            <li>Cloud computing,</li>
-            <li>High Performance Computing,</li>
-            <li>Edge computing,</li>
-            <li>Mobile computing,</li>
-            <li>Distributed and Parallel computing,</li>
-            <li>Federated computing,</li>
-            <li>Web services,</li>
-            <li>Wireless Sensor Networks.</li>
+            <li>Cloud computing</li>
+            <li>Ubiquitous computing</li>
+            <li>Persuasive computing</li>
+            <li>High Performance computing</li>
+            <li>Edge computing</li>
+            <li>Mobile computing</li>
+            <li>Distributed and Parallel computing</li>
+            <li>Federated computing</li>
+            <li>Web services</li>
+            <li>Wireless Sensor Networks</li>
           </ul>
         </div>
       </div>
@@ -176,7 +179,7 @@
           VIT Bhopal University <br />
           Bhopal-Indore Highway<br />
           Kothrikalan, Sehore <br />
-          Madhya Pradesh — 466114 <br />
+          Madhya Pradesh, India — 466114 <br />
           Phone: +91/07560254500/501/502<br />
         </p>
 
