--- a/pages/Contact_US.html
+++ b/pages/Contact_US.html
@@ -19,7 +19,7 @@
           <ul class="menu-items">
             <li><a href="../index.html">Home</a></li>
             <li><a href="Registration.html">Registration</a></li>
-            <li><a href="organizing_team.html">Convenor</a></li>
+            <li><a href="organizing_team.html">The Team</a></li>
             <li><a href="Contact_US.html">Contact Us</a></li>
           </ul>
           <!-- <h1 class="logo">Navbar</h1> -->
@@ -61,7 +61,7 @@
           VIT Bhopal University <br />
           Bhopal-Indore Highway<br />
           Kothrikalan, Sehore <br />
-          Madhya Pradesh — 466114 <br />
+          Madhya Pradesh, India — 466114 <br />
           Phone: +91/07560254500/501/502<br />
         </p>
 
