--- a/pages/organizing_team.html
+++ b/pages/organizing_team.html
@@ -19,7 +19,7 @@
           <ul class="menu-items">
             <li><a href="../index.html">Home</a></li>
             <li><a href="Registration.html">Registration</a></li>
-            <li><a href="organizing_team.html">Convenor</a></li>
+            <li><a href="organizing_team.html">The Team</a></li>
             <li><a href="Contact_US.html">Contact Us</a></li>
           </ul>
           <!-- <h1 class="logo">Navbar</h1> -->
@@ -46,14 +46,14 @@
               University.
             </li>
           </ul>
-          <h3>Patron</h3>
+          <h3>Patrons</h3>
           <ul style="list-style-type: circle">
             <li>
               Mr. Sankar Viswanathan, Vice President, VIT Bhopal University.
             </li>
             <li>
-              Ms, Kadhambari S Viswanathan, Assistant Vice President, VIT Bhopal
-              University,
+              Ms. Kadhambari S Viswanathan, Assistant Vice President, VIT Bhopal
+              University.
             </li>
           </ul>
         </div>
@@ -83,7 +83,7 @@
           <ul style="list-style-type: circle">
             <li>
               Dr. G. Vishnuvarthanan, Associate Professor, Data Science
-              Division, SCSE, VIT Bhopal University. Convener(s)
+              Division, SCSE, VIT Bhopal University.
             </li>
           </ul>
           <h3>Convener(s)</h3>
@@ -97,15 +97,16 @@
               ECommerce Technology, SCSE, VIT Bhopal University.
             </li>
             <li>
-              Dr. S. Vairachilai, Assistant Professor (senior), Programme Chair
+              Dr. S. Vairachilai, Assistant Professor (Senior), Programme Chair
               — Computational and Data Science, SCSE, VIT Bhopal University.
             </li>
             <li>
-              Dr. RAjdeep Singh Payal, Assistant Professor, SASL, VIT Bhopal
+              Dr. Rajdeep Singh Payal, Assistant Professor, SASL, VIT Bhopal
               University.
             </li>
             <li>
-              Dr. Zeeshan, Assistant Professor, SASL, VIT Bhopal University.
+              Dr. Sayed Mohammed Zeeshan, Assistant Professor, SASL, VIT Bhopal
+              University.
             </li>
             <li>
               Dr. Saurav Prasad, Assistant Professor, SASL, VIT Bhopal
@@ -155,8 +156,8 @@
               Victoria, Australia.
             </li>
             <li>
-              Dr. Pon Harshavardhanan, Division Head, School of Computing
-              Science and Engineering, VIT Bhopal University.
+              Dr. Pon Harshavardhanan, Associate Professor (Senior) & Division
+              Head (Data Science), SCSE, VIT Bhopal University.
             </li>
           </ul>
           <h3>Co-Editors</h3>
@@ -179,7 +180,8 @@
               University.
             </li>
             <li>
-              Dr. Zeeshan, Assistant Professor, SASL, VIT Bhopal University.
+              Dr. Dr. Sayed Mohammed Zeeshan, Assistant Professor, SASL, VIT
+              Bhopal University.
             </li>
             <li>
               Dr. Saurav Prasad, Assistant Professor, SASL, VIT Bhopal
@@ -200,7 +202,7 @@
           VIT Bhopal University <br />
           Bhopal-Indore Highway<br />
           Kothrikalan, Sehore <br />
-          Madhya Pradesh — 466114 <br />
+          Madhya Pradesh, India — 466114 <br />
           Phone: +91/07560254500/501/502<br />
         </p>
 
