--- a/pages/organizing_team.html
+++ b/pages/organizing_team.html
@@ -97,8 +97,8 @@
               ECommerce Technology, SCSE, VIT Bhopal University.
             </li>
             <li>
-              Dr. S. Vairachilai, Assistant Professor (Senior), Programme Chair
-              — Computational and Data Science, SCSE, VIT Bhopal University.
+              Dr. S. Vairachilai, Assistant Professor (Senior), Programme Chair - 
+              Computational and Data Science, SCSE, VIT Bhopal University.
             </li>
             <li>
               Dr. Rajdeep Singh Payal, Assistant Professor, SASL, VIT Bhopal
@@ -144,7 +144,7 @@
         <hr class="part" />
         <div class="container">
           <h3 style="text-align: center">Editorial Team</h3>
-          <h3>Editors in Chief</h3>
+          <h3>Editors-in-Chief</h3>
           <ul style="list-style-type: circle">
             <li>
               Dr. Rajkumar Buyya, Professor and Director of the Cloud Computing
@@ -172,8 +172,7 @@
             </li>
             <li>Programme Chair - ECommerce, SCSE, VIT Bhopal University.</li>
             <li>
-              Dr. S. Vairachilai, Assistant Professor (senior), Programme Chair
-              — Computational and Data Science, SCSE, VIT Bhopal University.
+              Dr. S. Vairachilai, Assistant Professor (senior), Programme Chair - Computational and Data Science, SCSE, VIT Bhopal University.
             </li>
             <li>
               Dr. Rajdeep Singh Payal, Assistant Professor, SASL, VIT Bhopal
