--- a/pages/Contact_US.html
+++ b/pages/Contact_US.html
@@ -61,10 +61,9 @@
           VIT Bhopal University <br />
           Bhopal-Indore Highway<br />
           Kothrikalan, Sehore <br />
-          Madhya Pradesh, India — 466114 <br />
+          Madhya Pradesh, India - 466114 <br />
           Phone: +91/07560254500/501/502<br />
         </p>
-
         <h3 style="color: white">VIT Bhopal Information Center Indore</h3>
       </div>
     </footer>
