--- a/pages/Registration.html
+++ b/pages/Registration.html
@@ -96,7 +96,7 @@
           VIT Bhopal University <br />
           Bhopal-Indore Highway<br />
           Kothrikalan, Sehore <br />
-          Madhya Pradesh, India — 466114 <br />
+          Madhya Pradesh, India - 466114 <br />
           Phone: +91/07560254500/501/502<br />
         </p>
 
