--- a/pages/organizing_team.html
+++ b/pages/organizing_team.html
@@ -42,8 +42,7 @@
           <h3>Chief Patron</h3>
           <ul style="list-style-type: circle">
             <li>
-              Honorable Dr. G. Viswanathan, Founder & Chancellor, VIT
-              University.
+              Honorable Dr. G. Viswanathan, Founder & Chancellor, VIT University.
             </li>
           </ul>
           <h3>Patrons</h3>
@@ -52,8 +51,7 @@
               Mr. Sankar Viswanathan, Vice President, VIT Bhopal University.
             </li>
             <li>
-              Ms. Kadhambari S Viswanathan, Assistant Vice President, VIT Bhopal
-              University.
+              Ms. Kadhambari S Viswanathan, Assistant Vice President, VIT Bhopal University.
             </li>
           </ul>
         </div>
@@ -62,7 +60,7 @@
           <h3>Co - Patrons</h3>
           <ul style="list-style-type: circle">
             <li>
-              Dr. A. Senthil Kumar , Vice Chancellor, VIT Bhopal University.
+              Dr. A. Senthil Kumar, Vice Chancellor, VIT Bhopal University.
             </li>
             <li>Dr. Debashish Adhikari, Registrar, VIT Bhopal University.</li>
           </ul>
@@ -82,62 +80,49 @@
           <h3>Organizing Secretary</h3>
           <ul style="list-style-type: circle">
             <li>
-              Dr. G. Vishnuvarthanan, Associate Professor, Data Science
-              Division, SCSE, VIT Bhopal University.
+              Dr. G. Vishnuvarthanan, Associate Professor, Data Science Division, SCSE, VIT Bhopal University.
             </li>
           </ul>
           <h3>Convener(s)</h3>
           <ul style="list-style-type: circle">
             <li>
-              Dr. Virendra Singh Kushwah, Assistant Professor (Senior),
-              Programme Chair - Cloud Computing, SCSE, VIT Bhopal University.
+              Dr. Virendra Singh Kushwah, Assistant Professor (Senior), Programme Chair - Cloud Computing, SCSE, VIT Bhopal University.
             </li>
             <li>
-              Dr. M. Manimaran, Senior Assistant Professor, Programme Chair -
-              ECommerce Technology, SCSE, VIT Bhopal University.
+              Dr. M. Manimaran, Senior Assistant Professor, Programme Chair - E-Commerce Technology, SCSE, VIT Bhopal University.
             </li>
             <li>
-              Dr. S. Vairachilai, Assistant Professor (Senior), Programme Chair - 
-              Computational and Data Science, SCSE, VIT Bhopal University.
+              Dr. S. Vairachilai, Assistant Professor (Senior), Programme Chair - Computational and Data Science, SCSE, VIT Bhopal University.
             </li>
             <li>
-              Dr. Rajdeep Singh Payal, Assistant Professor, SASL, VIT Bhopal
-              University.
+              Dr. Rajdeep Singh Payal, Assistant Professor, SASL, VIT Bhopal University.
             </li>
             <li>
-              Dr. Sayed Mohammed Zeeshan, Assistant Professor, SASL, VIT Bhopal
-              University.
+              Dr. Sayed Mohammed Zeeshan, Assistant Professor, SASL, VIT Bhopal University.
             </li>
             <li>
-              Dr. Saurav Prasad, Assistant Professor, SASL, VIT Bhopal
-              University.
+              Dr. Saurav Prasad, Assistant Professor, SASL, VIT Bhopal University.
             </li>
             <li>
-              Dr. Soumya Sankar Ghosh, Assistant Professor, SASL, VIT Bhopal
-              University.
+              Dr. Soumya Sankar Ghosh, Assistant Professor, SASL, VIT Bhopal University.
             </li>
           </ul>
           <h3>Local Advisory Body</h3>
           <ul style="list-style-type: circle">
             <li>
-              Dr. Hemant Kumar Nashine, Professor & Dean, School of Advanced
-              Sciences and Languages (SASL), VIT Bhopal University.
+              Dr. Hemant Kumar Nashine, Professor & Dean, School of Advanced Sciences and Languages (SASL), VIT Bhopal University.
             </li>
             <li>
-              Dr. Prasad Bedge, Associate Professor & Dean, School of Business
-              Administration, VIT Bhopal University.
+              Dr. Prasad Bedge, Associate Professor & Dean, School of Business Administration, VIT Bhopal University.
             </li>
             <li>
-              Dr. Debashis Adhikari, Professor & Dean, School of Electrical and
-              Electronics, VIT Bhopal University.
+              Dr. Debashis Adhikari, Professor & Dean, School of Electrical and Electronics, VIT Bhopal University.
             </li>
             <li>
-              Dr. S. Balaguru, Sr. Associate Professor & Dean (I/C), School of
-              Mechanical Engineering, VIT Bhopal University.
+              Dr. S. Balaguru, Sr. Associate Professor & Dean (I/C), School of Mechanical Engineering, VIT Bhopal University.
             </li>
             <li>
-              Dr. Sheetal Sharma, Professor & Dean, School of Architecture, VIT
-              Bhopal University.
+              Dr. Sheetal Sharma, Professor & Dean, School of Architecture, VIT Bhopal University.
             </li>
           </ul>
         </div>
@@ -147,48 +132,38 @@
           <h3>Editors-in-Chief</h3>
           <ul style="list-style-type: circle">
             <li>
-              Dr. Rajkumar Buyya, Professor and Director of the Cloud Computing
-              and Distributed Systems (CLOUDS) Laboratory at the University of
-              Melbourne, Australia.
+              Dr. Rajkumar Buyya, Professor and Director of the Cloud Computing and Distributed Systems (CLOUDS) Laboratory at the University of Melbourne, Australia.
             </li>
             <li>
-              Prof. Hua Wang, Professor, Victoria University, Melbourne,
-              Victoria, Australia.
+              Prof. Hua Wang, Professor, Victoria University, Melbourne, Victoria, Australia.
             </li>
             <li>
-              Dr. Pon Harshavardhanan, Associate Professor (Senior) & Division
-              Head (Data Science), SCSE, VIT Bhopal University.
+              Dr. Pon Harshavardhanan, Associate Professor (Senior) & Division Head (Data Science), SCSE, VIT Bhopal University.
             </li>
           </ul>
           <h3>Co-Editors</h3>
           <ul style="list-style-type: circle">
             <li>
-              Dr. G. Vishnuvarthanan, Associate Professor, School Of Computer
-              Science and Engineering, VIT Bhopal University.
+              Dr. G. Vishnuvarthanan, Associate Professor, School Of Computer Science and Engineering, VIT Bhopal University.
             </li>
             <li>
-              Dr. Virendra Singh Kushwah, Assistant Professor (Senior),
-              Programme Chair - Cloud Computing, SCSE, vrr Bhopal University.
+              Dr. Virendra Singh Kushwah, Assistant Professor (Senior), Programme Chair - Cloud Computing, SCSE, VIT Bhopal University.
             </li>
-            <li>Programme Chair - ECommerce, SCSE, VIT Bhopal University.</li>
+            <li>Dr. M. Manimaran, Senior Assistant Professor, Programme Chair - E-Commerce Technology, SCSE, VIT Bhopal University.</li>
             <li>
-              Dr. S. Vairachilai, Assistant Professor (senior), Programme Chair - Computational and Data Science, SCSE, VIT Bhopal University.
-            </li>
-            <li>
-              Dr. Rajdeep Singh Payal, Assistant Professor, SASL, VIT Bhopal
-              University.
+              Dr. S. Vairachilai, Assistant Professor (Senior), Programme Chair - Computational and Data Science, SCSE, VIT Bhopal University.
             </li>
             <li>
-              Dr. Dr. Sayed Mohammed Zeeshan, Assistant Professor, SASL, VIT
-              Bhopal University.
+              Dr. Rajdeep Singh Payal, Assistant Professor, SASL, VIT Bhopal University.
             </li>
             <li>
-              Dr. Saurav Prasad, Assistant Professor, SASL, VIT Bhopal
-              University.
+              Dr. Sayed Mohammed Zeeshan, Assistant Professor, SASL, VIT Bhopal University.
             </li>
             <li>
-              Dr. Soumya Sankar Ghosh, Assistant Professor, SASL, VIT Bhopal
-              University.
+              Dr. Saurav Prasad, Assistant Professor, SASL, VIT Bhopal University.
+            </li>
+            <li>
+              Dr. Soumya Sankar Ghosh, Assistant Professor, SASL, VIT Bhopal University.
             </li>
           </ul>
         </div>
@@ -201,7 +176,7 @@
           VIT Bhopal University <br />
           Bhopal-Indore Highway<br />
           Kothrikalan, Sehore <br />
-          Madhya Pradesh, India — 466114 <br />
+          Madhya Pradesh, India - 466114 <br />
           Phone: +91/07560254500/501/502<br />
         </p>
 
