--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       <div>
         <h1>
           The First “International Conference on Data, Computation and
-          Communication" is an event focused on the fields of data, computation
+          Communication“ is an event focused on the fields of data, computation
           and communication.
         </h1>
         <span class="span1">(ICDCC-2024)</span>
