--- a/index.html
+++ b/index.html
@@ -30,9 +30,7 @@
     <section class="hero" id="hero">
       <div>
         <h1>
-          The First “International Conference on Data, Computation and
-          Communication“ is an event focused on the fields of data, computation
-          and communication.
+          The First "International Conference on Data, Computation and Communication" is an event focused on the fields of data, computation and communication.
         </h1>
         <span class="span1">(ICDCC-2024)</span>
         <span class="date"> 29 Nov 2024 & 30 Nov 2024</span>
