--- a/pages/organizing_team.html
+++ b/pages/organizing_team.html
@@ -144,7 +144,7 @@
           <h3>Co-Editors</h3>
           <ul style="list-style-type: circle">
             <li>
-              Dr. G. Vishnuvarthanan, Associate Professor, School Of Computer Science and Engineering, VIT Bhopal University.
+              Dr. G. Vishnuvarthanan, Associate Professor, School of Computer Science and Engineering, VIT Bhopal University.
             </li>
             <li>
               Dr. Virendra Singh Kushwah, Assistant Professor (Senior), Programme Chair - Cloud Computing, SCSE, VIT Bhopal University.
