--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <li><a href="pages/Contact_US.html">Contact Us</a></li>
           </ul>
           <!-- <h1 class="logo">Navbar</h1> -->
-          <img src="../Img/logochhota 3.png" class="logo" />
+          <img src="https://github.com/akp660/IEEE-Confrence-WebPage/blob/41f3255cc39f92fedcf28110a91328ce230acec9/Img/logochhota%203.png" class="logo" />
         </div>
       </nav>
     </header>
